[gd_scene load_steps=9 format=3 uid="uid://c6onbmkmbvls0"]

[ext_resource type="Script" uid="uid://bcjjbqbmnft2c" path="res://scenes/pagina_04_conteudo.gd" id="1_ghgr3"]
[ext_resource type="Texture2D" uid="uid://btrcj4lbqkof8" path="res://assets/imagens/4.png" id="2_ghgr3"]
[ext_resource type="Texture2D" uid="uid://d2bt2wnsw2u40" path="res://assets/imagens/icone_som_ligado.png" id="3_kvdkd"]
[ext_resource type="Texture2D" uid="uid://daxofvpm4td7h" path="res://assets/imagens/bola-de-futebol (2).png" id="4_qietv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kvdkd"]
radius = 66.37017

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qietv"]
size = Vector2(217.5, 188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cydkn"]
size = Vector2(152.5, 222.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64cnq"]
size = Vector2(670, 885)

[node name="Pagina04Conteudo" type="Control" node_paths=PackedStringArray("bola", "linha_mira", "alvo_gol", "alvo_amigo")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ghgr3")
bola = NodePath("Bola")
linha_mira = NodePath("Line2D")
alvo_gol = NodePath("ZonaGol")
alvo_amigo = NodePath("ZonaAmigo")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-79, 0)
points = PackedVector2Array(100, 179)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ghgr3")

[node name="BotaoRetroceder" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 18.0
offset_top = 919.0
offset_right = 68.0
offset_bottom = 965.0
theme_override_colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.4)

[node name="BotaoAvancar" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 692.0
offset_top = 920.0
offset_right = 748.0
offset_bottom = 964.0
theme_override_colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.4)
text = "
"

[node name="BotaoSom" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 679.0
offset_top = 14.0
offset_right = 747.0
offset_bottom = 77.0
icon = ExtResource("3_kvdkd")
flat = true

[node name="Bola" type="RigidBody2D" parent="."]
position = Vector2(207, -19)
mass = 5.0
gravity_scale = 0.0
linear_damp = 1.0

[node name="Sprite2D" type="Sprite2D" parent="Bola"]
position = Vector2(176, 932)
texture = ExtResource("4_qietv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bola"]
position = Vector2(174, 933)
shape = SubResource("CircleShape2D_kvdkd")

[node name="ZonaGol" type="Area2D" parent="."]
position = Vector2(-4, 40)

[node name="Apito" type="Sprite2D" parent="ZonaGol"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaGol"]
position = Vector2(159.25, 645)
shape = SubResource("RectangleShape2D_qietv")

[node name="ZonaAmigo" type="Area2D" parent="."]
position = Vector2(-249, 501)

[node name="Coração" type="Sprite2D" parent="ZonaAmigo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaAmigo"]
position = Vector2(887, 241)
shape = SubResource("RectangleShape2D_cydkn")

[node name="Paredes" type="StaticBody2D" parent="."]
position = Vector2(-5, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes"]
position = Vector2(387, 494.5)
shape = SubResource("RectangleShape2D_64cnq")

[connection signal="pressed" from="TextureRect/BotaoRetroceder" to="." method="_on_botao_retroceder_pressed"]
[connection signal="pressed" from="TextureRect/BotaoAvancar" to="." method="_on_botao_avancar_pressed"]
[connection signal="pressed" from="TextureRect/BotaoSom" to="." method="_on_botao_som_pressed"]
